--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ Colore Blu di Prussia: #002B49
 Colore Pantone: #EF7B00
 */
 
+/* #region Main Theme */
+
 * {
     margin: 0;
     padding: 0;
@@ -11,19 +13,28 @@ Colore Pantone: #EF7B00
     box-sizing: border-box;
 }
 
+html, body {
+    height: 100%;
+}
+
 h1 {
     font-size: 50px;
     font-family: "Sofia", sans-serif;
+}
+
+a {
+    font-size: 30px;
+    text-decoration: none;
+    color: #FFFFFF;
 }
 
 p {
     font-size: 25px;
 }
 
+/* #endregion Main Theme */
 
-html, body {
-    height: 100%;
-}
+/* #region Navbar */
 
 nav {
     height: 40%;
@@ -33,36 +44,28 @@ nav {
     grid-template-columns: 1fr 1fr 1fr;
 }
 
-nav div {
-    height: 100%;
-}
-
-.nav-list {
+.menu {
     text-align: center;
-    height: fit-content;
     margin: auto;
 }
 
-.nav-list ul {
+.menu-list {
     list-style-type: none;
 }
 
-.nav-item {
+.menu-item {
     padding: 10px 10px;
 }
 
-.nav-item a {
-    font-size: 30px;
+.menu-item a {
     font-weight: bold;
-    text-decoration: none;
-    color: #FFFFFF;
     transition: all .3s;
     -webkit-transition: all .3s;
     -moz-transition: all .3s;
     -o-transition: all .3s;
 }
 
-.nav-item a:hover {
+.menu-item a:hover {
     color: #EF7B00;
 }
 
@@ -76,6 +79,10 @@ nav div {
     background-size: 60%;
 }
 
+/* #endregion Navbar */
+
+/* #region Body */
+
 .section {
     height: 50%;
     width: 100%;
@@ -84,26 +91,39 @@ nav div {
     grid-template-columns: 1fr 1fr;
 }
 
-.section div {
-    height: 100%;
-    display: inline-block;
-    position: relative;
-}
-
 .section-text {
     background-color: white;
-    color: black;
-    top: 30%;
-    height: 70% !important;
-}
-
-.section-text p {
-    padding: 0px 200px 0px 200px;
+    position: relative;
 }
 
 .section-image {
     background-color: #EF7B00;
 }
+
+.generic-content {
+    width: 100%;
+    position: absolute;
+    top: 50%; 
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.generic-content h1 {
+    width: 80%;
+    margin: auto;
+    color: #EF7B00;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+.generic-content p {
+    width: 50%;
+    margin: auto;
+    padding: 50px;
+}
+
+/* #endregion Body */
+
+/* #region Footer */
 
 footer {
     height: 20%;
@@ -114,14 +134,28 @@ footer {
 .social {
     height: 50%;
     width: 100%;
-    text-align: center;
+    position: relative;
 }
 
-.social img {
-    margin-top: 40px;
-    padding:  0 30px;
-    height: 60%;
-    width: auto;
+.social-list-wrapper {
+    height: 70%;
+    position: absolute;
+    top: 100%; left: 50%;
+    transform: translate(-50%,-100%);
+}
+
+.social-list {
+    list-style-type: none;
+}
+
+.social-item {
+    padding: 0 30px;
+    display: inline;
+}
+
+.social-item a img {
+    height: 65px;
+    width: 65x;
 }
 
 .copyright {
@@ -138,6 +172,49 @@ footer {
     vertical-align: middle;
 }
 
-@media (max-width: 800px) {
+/* #endregion Footre */
+
+/* #region Responsive Design */
+
+/* Large Tablets */
+@media screen and (max-width: 1200px) {
+    h1 { font-size: 35px; }
+    a { font-size: 20px; }
+    p { font-size: 20px; }
+    nav { height: 25%; }
+
+    .logoClub { background-size: 90%; }
+    .logoPoli { background-size: 75%; }
+    .generic-content h1 { width: 85%; }
+    .generic-content p { width: 90%; padding: 20px;}
+
+    footer { height: 150px; }
+    .social-item a img { height: 50px; width: 50px;}
+}
+
+/* Tablets */
+@media screen and (max-width: 767px) {
+    h1 { font-size: 30px; }
+    a { font-size: 17px; }
+    p { font-size: 17px; }
+    nav { height: 20%; }
+
+    .menu-item { padding: 5px 10px; }
+    .logoClub { background-size: 90%; }
+    .logoPoli { background-size: 75%; }
+
+    .section { height: 40%; }
+    .generic-content h1 { width: 85%; }
+    .generic-content p { width: 90%; padding: 20px;}
+
+    footer { height: 130px; }
+    .social-item { padding: 0 20px; }
+    .social-item a img { height: 35px; width: 35px;}
+}
+
+/* Smartphones */
+@media screen and (max-width: 479px) {
 
 }
+
+/* #endregion Responsive Design */
