--- a/style.css
+++ b/style.css
@@ -34,6 +34,54 @@ p {
 
 /* #endregion Main Theme */
 
+/* #region HamburgerMenu */
+/* The Overlay (background) */
+.overlay {
+    /* Height & width depends on how you want to reveal the overlay (see JS below) */   
+    height: 100%;
+    width: 0;
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 43, 73, 0.9); /* Black w/opacity */
+    overflow-x: hidden; /* Disable horizontal scroll */
+    transition: 0.35s; /* 0.2 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+  }
+  
+  /* Position the content inside the overlay */
+  .overlay-content {
+    position: relative;
+    top: 25%; /* 25% from the top */
+    width: 100%; /* 100% width */
+    text-align: center; /* Centered text/links */
+    margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+  }
+  
+  /* The navigation links inside the overlay */
+  .overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 20px;
+    color: #DDDDDD;
+    display: block; /* Display block instead of inline */
+    transition: 0.3s; /* Transition effects on hover (color) */
+  }
+  
+  /* When you mouse over the navigation links, change their color */
+  .overlay a:hover, .overlay a:focus {
+    color: #EF7B00;
+  }
+  
+  /* Position the close button (top right corner) */
+  .overlay .closebtn {
+    position: absolute;
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
+/* #endregion HamburgerMenu */
+
 /* #region Navbar */
 
 nav {
@@ -77,6 +125,20 @@ nav {
 .logoPoli {
     background: url(./images/logoPolitoNeg.png) no-repeat center center;
     background-size: 60%;
+}
+
+.hamburger {
+    display: none;
+}
+
+.bar {
+    display: block;
+    width: 35px;
+    height: 3px;
+    margin: 5px auto;
+    background-color: white;
+    -webkit-transition: all 0.3 ease-in-out;
+    transition: all 0.3 ease-in-out;
 }
 
 /* #endregion Navbar */
@@ -177,44 +239,83 @@ footer {
 /* #region Responsive Design */
 
 /* Large Tablets */
-@media screen and (max-width: 1200px) {
-    h1 { font-size: 35px; }
-    a { font-size: 20px; }
-    p { font-size: 20px; }
+@media screen and (max-width: 1100px) {
+    
+    h1 { font-size: 38px; }
+    a { font-size: 23px; }
+    p { font-size: 23px; }
+    
     nav { height: 25%; }
-
     .logoClub { background-size: 90%; }
     .logoPoli { background-size: 75%; }
+    
     .generic-content h1 { width: 85%; }
     .generic-content p { width: 90%; padding: 20px;}
-
+    
     footer { height: 150px; }
     .social-item a img { height: 50px; width: 50px;}
 }
 
+@media screen and (max-width: 820px) {
+    
+    nav { height: 20% }
+    .menu-item a { font-size: 20px; }
+}
+
 /* Tablets */
-@media screen and (max-width: 767px) {
-    h1 { font-size: 30px; }
+@media screen and (max-width: 770px) {
+    
+    h1 { font-size: 32px; }
     a { font-size: 17px; }
     p { font-size: 17px; }
-    nav { height: 20%; }
-
-    .menu-item { padding: 5px 10px; }
-    .logoClub { background-size: 90%; }
-    .logoPoli { background-size: 75%; }
-
+    
+    .menu-list {display:  none; }
+    .hamburger { display: block; }
+    .hamburger.active .bar:nth-child(2) { opacity: 0; }
+    .hamburger.active .bar:nth-child(1) { transform: translateY(8px) rotate(45deg); }
+    .hamburger.active .bar:nth-child(3) { transform: translateY(-8px) rotate(-45deg); }
+    
     .section { height: 40%; }
-    .generic-content h1 { width: 85%; }
-    .generic-content p { width: 90%; padding: 20px;}
-
+    
     footer { height: 130px; }
     .social-item { padding: 0 20px; }
     .social-item a img { height: 35px; width: 35px;}
 }
 
+@media screen and (max-width: 650px) {
+    .social-item { padding: 0 10px; }
+    .social-item a img { height: 30px; width: 30px; }
+}
+
 /* Smartphones */
 @media screen and (max-width: 479px) {
+    
+    h1 { font-size: 16px; }
+    a { font-size: 11px; }
+    p { font-size: 11px; }
+    
+    nav { height: 18%; }
 
+    .section { height: 35%; }
+    .generic-content p { padding: 18px;}
+
+    footer { height: 110px; }
+    .copyright p { font-size: 15px; }
+}
+
+@media screen and (max-height: 650px) {
+    .section { height: 45%; }
+}
+
+/* LandScape */
+@media screen and (max-height: 450px) {
+    
+    nav { height: 35%; }
+    .menu-list {display:  none;}
+    .logoClub { background-size: 70%; }
+    .logoPoli { background-size: 55%; }
+
+    .section { height: 100%; }
 }
 
 /* #endregion Responsive Design */
