--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ Colore Pantone: #EF7B00
 * {
     margin: 0;
     padding: 0;
-    font-family: Fredoka, sans-serif;
+    font-family: "Fredoka", sans-serif;
     scroll-behavior: smooth;
     box-sizing: border-box;
 }
@@ -17,24 +17,50 @@ html, body {
     height: 100%;
 }
 
+ul {
+    list-style-type: none;
+}
+
 h1 {
-    font-size: 50px;
     font-family: "Sofia", sans-serif;
 }
 
 a {
-    font-size: 30px;
+    font-size: 1.5vw;
     text-decoration: none;
     color: #FFFFFF;
 }
 
-p {
-    font-size: 25px;
-}
-
 /* #endregion Main Theme */
 
+/* #region Popup */
+
+.popup {
+    position: absolute;
+    z-index: 100;
+    width: 50%;
+    margin: 25%;
+    top: 10%;
+    transform: scale(0.01);
+    text-align: center;
+    padding: 5px 10px;
+    background-color: white;
+    color: #002B49;
+    border: 5px solid black;
+    border-radius: 60px;
+    visibility: hidden;
+    transition: 0.4s;
+}
+
+.openPopup {
+    visibility: visible;
+    transform: scale(1);
+}
+
+/* #endregion */
+
 /* #region HamburgerMenu */
+
 /* The Overlay (background) */
 .overlay {
     /* Height & width depends on how you want to reveal the overlay (see JS below) */   
@@ -80,12 +106,13 @@ p {
     top: 15px;
     right: 35px;
   }
+  
 /* #endregion HamburgerMenu */
 
 /* #region Navbar */
 
 nav {
-    height: 40%;
+    height: 330px;
     width: 100%;
     background-color: #002B49;
     display: grid;
@@ -95,10 +122,6 @@ nav {
 .menu {
     text-align: center;
     margin: auto;
-}
-
-.menu-list {
-    list-style-type: none;
 }
 
 .menu-item {
@@ -119,12 +142,12 @@ nav {
 
 .logoClub {
     background: url(./images/logoClubNeg.png) no-repeat center center;
-    background-size: 75%;
+    background-size: 85%;
 }
 
 .logoPoli {
     background: url(./images/logoPolitoNeg.png) no-repeat center center;
-    background-size: 60%;
+    background-size: 70%;
 }
 
 .hamburger {
@@ -146,7 +169,7 @@ nav {
 /* #region Body */
 
 .section {
-    height: 50%;
+    height: 40%;
     width: 100%;
     text-align: center;
     display: grid;
@@ -160,6 +183,7 @@ nav {
 
 .section-image {
     background-color: #EF7B00;
+    position: relative;
 }
 
 .generic-content {
@@ -171,16 +195,59 @@ nav {
 }
 
 .generic-content h1 {
-    width: 80%;
+    width: 85%;
     margin: auto;
     color: #EF7B00;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .generic-content p {
-    width: 50%;
+    width: 90%;
     margin: auto;
-    padding: 50px;
+    padding: 20px 5%;
+}
+
+.eventSection {
+    height: 300px;
+    width: 100%;
+    text-align: center;
+    display: grid;
+    padding: 20px 40px;
+    background-color: #EF7B00;
+}
+
+.eventContent {
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 50px;
+    border: 10px solid #002B49;
+    display: grid;
+    grid-template-columns: 2fr 4fr;
+}
+
+.eventSectionDate {
+    background-color: rgba(255, 255, 255, 0.6);
+    border-top-left-radius: 40px;
+    border-bottom-left-radius: 40px;
+    padding: 20px;
+    border-right: 10px solid #002B49;
+    position: relative;
+}
+
+.eventSectionDate h1{
+    color: black !important;
+    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+}
+
+.eventSectionDescription {
+    position: relative;
+}
+
+.firstEvent {
+    padding-top: 40px; 
+}
+
+.lastEvent {
+    padding-bottom: 40px; 
 }
 
 /* #endregion Body */
@@ -188,7 +255,7 @@ nav {
 /* #region Footer */
 
 footer {
-    height: 20%;
+    height: 200px;
     width: 100%;
     background-color: #444444;
 }
@@ -200,19 +267,20 @@ footer {
 }
 
 .social-list-wrapper {
-    height: 70%;
+    height: 50%;
     position: absolute;
-    top: 100%; left: 50%;
-    transform: translate(-50%,-100%);
-}
-
-.social-list {
-    list-style-type: none;
+    top: 50%; left: 50%;
+    transform: translate(-50%,-50%);
 }
 
 .social-item {
     padding: 0 30px;
     display: inline;
+}
+
+.social-item li a {
+    height: 65px;
+    width: 65x;
 }
 
 .social-item a img {
@@ -238,84 +306,51 @@ footer {
 
 /* #region Responsive Design */
 
-/* Large Tablets */
-@media screen and (max-width: 1100px) {
-    
-    h1 { font-size: 38px; }
-    a { font-size: 23px; }
-    p { font-size: 23px; }
-    
-    nav { height: 25%; }
-    .logoClub { background-size: 90%; }
-    .logoPoli { background-size: 75%; }
-    
-    .generic-content h1 { width: 85%; }
-    .generic-content p { width: 90%; padding: 20px;}
-    
-    footer { height: 150px; }
-    .social-item a img { height: 50px; width: 50px;}
-}
-
-@media screen and (max-width: 820px) {
-    
-    nav { height: 20% }
-    .menu-item a { font-size: 20px; }
-}
-
-/* Tablets */
 @media screen and (max-width: 770px) {
     
-    h1 { font-size: 32px; }
-    a { font-size: 17px; }
-    p { font-size: 17px; }
-    
+    nav { height: 180px; }
+
+    .menu-list {display:  none; }
+    .hamburger { display: block; }
+    .hamburger.active .bar:nth-child(2) { opacity: 0; }
+    .hamburger.active .bar:nth-child(1) { transform: translateY(8px) rotate(45deg); }
+    .hamburger.active .bar:nth-child(3) { transform: translateY(-8px) rotate(-45deg); }
+  
+    .section { height: 60vw; }
+
+    footer { height: 150px; }
+    .social-item { padding: 0 20px; }
+    .social-item a img { height: 37px; width: 37px;}
+}
+
+@media screen and (max-width: 560px)
+{
+    .eventContent {
+        grid-template-rows: 2fr 5fr;
+        grid-template-columns: 1fr;
+        border: 7px solid #002B49;
+    }
+    .eventSectionDate {
+        border-right: 0px;
+        border-bottom: 7px solid #002B49;
+        border-bottom-left-radius: 0px;
+        border-top-right-radius: 40px;
+    }
+}
+
+@media screen and (max-height: 750px) {
+
+    nav { height: 180px; }
+
     .menu-list {display:  none; }
     .hamburger { display: block; }
     .hamburger.active .bar:nth-child(2) { opacity: 0; }
     .hamburger.active .bar:nth-child(1) { transform: translateY(8px) rotate(45deg); }
     .hamburger.active .bar:nth-child(3) { transform: translateY(-8px) rotate(-45deg); }
     
-    .section { height: 40%; }
-    
-    footer { height: 130px; }
-    .social-item { padding: 0 20px; }
-    .social-item a img { height: 35px; width: 35px;}
-}
+    .section { height: 80%; }
 
-@media screen and (max-width: 650px) {
-    .social-item { padding: 0 10px; }
-    .social-item a img { height: 30px; width: 30px; }
-}
-
-/* Smartphones */
-@media screen and (max-width: 479px) {
-    
-    h1 { font-size: 16px; }
-    a { font-size: 11px; }
-    p { font-size: 11px; }
-    
-    nav { height: 18%; }
-
-    .section { height: 35%; }
-    .generic-content p { padding: 18px;}
-
-    footer { height: 110px; }
-    .copyright p { font-size: 15px; }
-}
-
-@media screen and (max-height: 650px) {
-    .section { height: 45%; }
-}
-
-/* LandScape */
-@media screen and (max-height: 450px) {
-    
-    nav { height: 35%; }
-    .menu-list {display:  none;}
-    .logoClub { background-size: 70%; }
-    .logoPoli { background-size: 55%; }
-
-    .section { height: 100%; }
+    footer { height: 150px; }
 }
 
 /* #endregion Responsive Design */
