--- a/style.css
+++ b/style.css
@@ -158,25 +158,56 @@ nav {
 
 .preface {
     background-color: rgb(239, 123, 0, 0.7);
-    padding: 150px;
+    padding: 80px;
     color:  white;
 }
 
 .carousel-container {
     height: 60%;
     width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.side-images {
+    background-size: contain !important;   
+    height: 60%;
+    width: 60%;
+    margin: auto;
 }
 
 .carousel {
     height: 80%;
-    width: 80%;
+    width: 100%;
     background-repeat: no-repeat;
     background-position: center;
-    background-size: contain;
+    background-size: cover;
     position: relative;
+    border: 3px #002B49 solid;
     top: 50%; 
     left: 50%;
     transform: translate(-50%,-50%);
+}
+
+.past-tournaments-container {
+    background-color: rgb(239, 123, 0, 0.7);
+    height: 60%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+}
+
+.list-container {
+    margin-top: 50px;
+}
+
+.list-container h1 {
+    color: #002B49;
+    font-size: 3.5vw !important;
+}
+
+.list-container a {
+    font-size: 2vw;
 }
 
 /* #endregion Body */
@@ -337,7 +368,7 @@ footer {
 .container {
     width: 100%;
     height: 70vh;
-    background-color: rgb(239, 123, 0, 0.7);
+    background-color: whitesmoke;
     color: #eee;
     display: flex;
     justify-content: center;
